<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="486dp"
        android:layout_marginBottom="80dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/continue_with_google"
        android:textColor="#D33F3F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <Button
        android:id="@+id/btnFb"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/cardview_light_background"
        android:shadowColor="@color/black"

        android:text="@string/continue_with_facebook"
        android:textColor="#0B26BC"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/continue_with_twitter"
        android:textColor="#1288E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#810F0F" />

    <View
        android:id="@+id/divider"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="129dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="225dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="128dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="29dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="193dp"
        android:layout_marginTop="117dp"
        android:text="@string/or" />

</RelativeLayout>